# Chinese-License-Plate-Recognition

./: LPRNet.py  README.md  build.gradle  crnn.param  last.param  local.properties  lpr_export.py  ncnn_demo.cpp  ncnn_demo_crnn.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: best.param  color-sim.param  lpr2d-sim.param  plate_rec_color.param
app/src/main/assets/lpr_basic/: lpr2d.param
app/src/main/java/com/tencent/yolov5ncnn/: MainActivity.java  PlateRecognition.java  YoloV5Ncnn.java
app/src/main/jni/: CMakeLists.txt  yolov5ncnn_jnitest.cpp
app/src/main/jni/ncnn-20220729-android-vulkan/arm64-v8a/include/ncnn/: platform.h
app/src/main/jni/ncnn-20220729-android-vulkan/arm64-v8a/lib/cmake/: OSDependentTargets.cmake  glslangTargets.cmake
app/src/main/jni/ncnn-20220729-android-vulkan/armeabi-v7a/include/ncnn/: platform.h
app/src/main/jni/ncnn-20220729-android-vulkan/armeabi-v7a/lib/cmake/: OGLCompilerTargets.cmake  SPIRVTargets.cmake
app/src/main/jni/ncnn-20220729-android-vulkan/x86_64/include/ncnn/: platform.h
app/src/main/jni/ncnn-20220729-android-vulkan/x86_64/lib/cmake/ncnn/: ncnn.cmake
app/src/main/jni/ncnn-20220729-android-vulkan/x86_64/lib/pkgconfig/: ncnn.pc
app/src/main/jni/opencv_m/sdk/native/jni/include/opencv2/: features2d.hpp
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
